# hackjakbrno

./: .gitignore  Dockerfile  README.md  bolus.ipynb  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: app.py  iris.py  migration.py  script.sh
backend/domain/: bar_chart.py  embedding.py  line_plot.py  utils.py
backend/handlers/: file_processing.py  file_upload.py  similarity_search.py
backend/infrastructure/: iris.py  migration.py
backend/schema/: file_processing.py  file_upload.py  similarity_search.py
backend/test/: script.sh  test_embeddings.sh
data/IT 30 ENG/: alarms_data_1.csv  cgm_data_1.csv
data/IT 30 ENG/Insulin data/: basal_data_1.csv  bolus_data_1.csv
data/MB 90 ENG/: bg_data_1.csv  cgm_data_2.csv
data/MB 90 ENG/Insulin data/: basal_data_1.csv  bolus_data_1.csv
data/NH 30 ENG/: bg_data_1.csv
data/NH 30 ENG/Insulin data/: basal_data_1.csv
data/TK 90 ENG/: bg_data_1.csv  cgm_data_1.csv
data/VV 90 ENG/: alarms_data_1.csv  bg_data_1.csv  cgm_data_1.csv
data/VV 90 ENG/Insulin data/: insulin_data_1.csv
data/insulin/IT 30 ENG/: bg_data_1.csv
data/insulin/MB 90 ENG/: alarms_data_1.csv  cgm_data_1.csv  cgm_data_3.csv
data/insulin/NH 30 ENG/: alarms_data_1.csv  cgm_data_1.csv
data/insulin/TK 90 ENG/: alarms_data_1.csv
frontend/: Dockerfile  bun.lockb  next.config.js  openapi.json  orval.config.js  package.json  tailwind.config.ts
frontend/src/api/: myApi.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: basal-insulin-chart.tsx  bolus-insulin-chart.tsx  chart-tooltip.tsx  (+9 more)
(+52 files in other folders)
